Añadimos el link de github del portafolio 2

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ No esta actualizado hasta el Sistema de ticket</p>
 </div>
 <div class="boton-proyectos">
 
-<a href="https://github.com/RicardoAltamiranoSanchez/PaginaDeViajes" class="boton-proyecto" >Ir al Repositorio</a>
+<a href="https://github.com/RicardoAltamiranoSanchez/Portafolio2.0" class="boton-proyecto" >Ir al Repositorio</a>
 </div>
 </div>
 </div>
